--- a/blueprints/compute/inputs.yaml.template
+++ b/blueprints/compute/inputs.yaml.template
@@ -17,7 +17,7 @@ account_type: ''
 # image: {publisher_name: 'Canonical', offer: 'UbuntuServer', sku: '14.04.3-LTS', version: 'latest'}
 # You need to put the VHD on the same storage account for custom image:
 # image: {os_uri: 'https://storage_account_name.core.windows.net/mycontainer/custom_image.vhd', 
-		  os_type: 'Linux|Windows'}
+#		  os_type: 'Linux|Windows'}
 
 # storage_account_deletable: False
 
