UPDATE (178) change yaml files to use the new image structure

--- a/blueprints/compute/inputs.yaml.template
+++ b/blueprints/compute/inputs.yaml.template
@@ -1,18 +1,31 @@
+# The size of the machine (A1_Standard, A2_Standard...)
 flavor_id: ''
-publisher_name: ''
-offer: ''
-sku: ''
+
 compute_name: ''
 compute_user: ''
 compute_password: ''
-public_key: |
 
 availability_set_name: ''
 network_interface_name: ''
 public_ip_name: ''
 storage_account_name: ''
 account_type: ''
+
+# Specify an image: use the image structure to give the image you want to instantiate.
+# You can specify an image from the Azure marketplace, or a VHD.
+# Marketplace image:
+# image: {publisher_name: 'Canonical', offer: 'UbuntuServer', sku: '14.04.3-LTS', version: 'latest'}
+# You need to put the VHD on the same storage account for custom image:
+# image: {os_uri: 'https://storage_account_name.core.windows.net/mycontainer/custom_image.vhd', 
+#		  os_type: 'Linux|Windows'}
+
 # storage_account_deletable: False
+
+# If you want a Windows machine, you can activate (true) or deactivate (false) automatic updates
+# windows_automatic_updates: false
+
+# If you want a Linux machine, you have to give a ssh key, put the CONTENT of the key here
+# public_key: |
 
 # compute_disks: ''
 # To add disks to the machine, make a list of disk with these properties:
