--- a/blueprints/nodecellar/azure-inputs.yaml.template
+++ b/blueprints/nodecellar/azure-inputs.yaml.template
@@ -1,7 +1,5 @@
 flavor_id: ''
-publisher_name: ''
-offer: ''
-sku: ''
+
 node_js_compute_name: ''
 mongod_compute_name : ''
 compute_user: ''
@@ -12,6 +10,14 @@ storage_account_name: ''
 mongod_network_interface_name: ''
 nodejs_network_interface_name: ''
 nodejs_public_ip_name: ''
+
+# Specify an image: use the image structure to give the image you want to instantiate.
+# You can specify an image from the Azure marketplace, or a VHD.
+# Marketplace image:
+# image: {publisher_name: 'Canonical', offer: 'UbuntuServer', sku: '14.04.3-LTS', version: 'latest'}
+# You need to put the VHD on the same storage account for custom image:
+# image: {os_uri: 'https://storage_account_name.core.windows.net/mycontainer/custom_image.vhd', 
+#		  os_type: 'Linux|Windows'}
 
 # mongod_disks: ''
 # To add disks to the machine, make a list of disk with these properties:
